--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/AlgebraReview.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/AlgebraReview.css">
     <title>Knewton Practice For College Algebra</title>
 </head>
 
