--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -79,6 +79,33 @@
             <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=aedc83ce-5228-48db-81e1-82ba3fb3edcf">Relations and Functions</a>
         </div>
     </div>
+
+    <div class='course-container'>
+        <h2>Self Paced Algebra Prep - Module 3</h2>
+        <h3>Exponents, Polynomials, and Factoring</h3>
+
+        <div class='assignment'>
+            <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=6245c5fa-ec3c-442a-9051-883d0f6e030c undefined">Properties of Exponents</a>
+        </div>
+        <div class='assignment'>
+            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22615d54-3131-4bb7-8988-8241cd665f8b">Scientific Notation</a>
+        </div>
+        <div class='assignment'>
+            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=d98f381d-8137-40a1-a650-3abf045ee789">Properties of Polynomials</a>
+        </div>
+        <div class='assignment'>
+            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=07d495c1-ba21-4dd9-aaf4-50bcecf5d0a7">Operations on Polynomials</a>
+        </div>
+        <div class='assignment'>
+            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=8183ec86-e46b-410c-8d2a-2887f7cf2b09">Factor Quadratics</a>
+        </div>
+        <div class='assignment'>
+            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22a4ff17-89bb-4049-8e93-b4f0aa0c5715">Other Factoring Techniques</a>
+        </div>
+
+
+
+    </div>
 </body>
 
 </html>
