--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -10,104 +10,110 @@
 </head>
 
 <body>
-
-    <div class='course-container'>
-        <h2>Self Paced Algebra Prep - Module 1</h2>
-        <h3>Real Number System, Linear Inequalities, and Linear Equations</h3>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=92e2f62d-80c1-43ce-b568-ead63e69e252">Add and Subtract Integers</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=edf235ee-f73a-4945-a183-2eb6f6ad3677">Intro to Integers and Absolute Value</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=90ac28c5-2630-4d96-a00b-0a5b9fba540f">Multiply and Divide Integers</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=5ab83e41-481a-4cea-ac11-64d20896d503">Introduction to Fractions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=f085b1c5-19b9-4be9-963a-2855b646acd5">Multiply and Divide Fractions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=92b806bb-dccb-423d-9f39-0a2aec3007b9">Add and Subtract Fractions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=d3379827-358d-48a2-b3fc-7e14579474ab">Introduction to Decimals</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=790c45d3-d804-4112-8618-b4052a884be3">Operations with Decimals</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=959fee77-ed57-4286-a0dd-40b4fcc49fb8">Fractions and Decimals</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=b6e79792-bd9d-4511-9021-24fcfb67edb9">Exponents and Roots</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=dd39a22f-fe3d-48ae-9e17-98e17fc3774a">Absolute Value Equations and Inequalities</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=e39acf91-ca58-4f65-b3ac-f45ac3fd5096">Write and Evaluate Algebraic Expressions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=3740a8ad-435d-4c83-abb1-98fd3e5da2b3">Simplify and Manipulate Algebraic Expressions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=3612cb5f-9d5b-451e-a6fb-768690e5cd82">Solve Linear Equations with Whole Numbers</a>
-        </div>
-    </div>
-
-    <div class='course-container'>
-        <h2>Self Paced Algebra Prep - Module 2</h2>
-        <h3>Graphs, Linear Equations, and Functions and Systems of Linear Equations</h3>
-
-
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=11f0159a-4f7b-4188-9786-90bbafde21bc">Cartesian Coordinates and Distances</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=aaa527d9-e653-47b8-b08a-96bdcaad0097">Domain and Piecewise Functions</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=7e8c11bc-8dd4-4d6b-a716-327f1f4b28b7">Find Linear Equations</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=c74d71b0-7a87-407b-9542-c0bc057ba7be">Function Notation</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=91de1d26-9e13-4ce5-bfed-8a7c08ae3b97">Identify Slopes and Intercepts</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=aedc83ce-5228-48db-81e1-82ba3fb3edcf">Relations and Functions</a>
-        </div>
-    </div>
-
-    <div class='course-container'>
-        <h2>Self Paced Algebra Prep - Module 3</h2>
-        <h3>Exponents, Polynomials, and Factoring</h3>
-
-        <div class='assignment'>
-            <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=6245c5fa-ec3c-442a-9051-883d0f6e030c undefined">Properties of Exponents</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22615d54-3131-4bb7-8988-8241cd665f8b">Scientific Notation</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=d98f381d-8137-40a1-a650-3abf045ee789">Properties of Polynomials</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=07d495c1-ba21-4dd9-aaf4-50bcecf5d0a7">Operations on Polynomials</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=8183ec86-e46b-410c-8d2a-2887f7cf2b09">Factor Quadratics</a>
-        </div>
-        <div class='assignment'>
-            <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22a4ff17-89bb-4049-8e93-b4f0aa0c5715">Other Factoring Techniques</a>
+    <div class='module'>
+        <a href="#module1">Module 1</a>
+        <a href="#module2">Module 2</a>
+        <a href="#module3">Module 3</a>
+        <a href="#module4">Module 4</a>
+        <a href="#module5">Module 5</a>
+        <a href="#module6">Module 6</a>
+        <a href="#module7">Module 7</a>
+        <a href="#module8">Module 8</a>
+        <div class='course-container' id='module1'>
+            <h2>Self Paced Algebra Prep - Module 1</h2>
+            <h3>Real Number System, Linear Inequalities, and Linear Equations</h3>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=92e2f62d-80c1-43ce-b568-ead63e69e252">Add and Subtract Integers</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=edf235ee-f73a-4945-a183-2eb6f6ad3677">Intro to Integers and Absolute Value</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=90ac28c5-2630-4d96-a00b-0a5b9fba540f">Multiply and Divide Integers</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=5ab83e41-481a-4cea-ac11-64d20896d503">Introduction to Fractions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=f085b1c5-19b9-4be9-963a-2855b646acd5">Multiply and Divide Fractions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=92b806bb-dccb-423d-9f39-0a2aec3007b9">Add and Subtract Fractions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=d3379827-358d-48a2-b3fc-7e14579474ab">Introduction to Decimals</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=790c45d3-d804-4112-8618-b4052a884be3">Operations with Decimals</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=959fee77-ed57-4286-a0dd-40b4fcc49fb8">Fractions and Decimals</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=b6e79792-bd9d-4511-9021-24fcfb67edb9">Exponents and Roots</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=dd39a22f-fe3d-48ae-9e17-98e17fc3774a">Absolute Value Equations and Inequalities</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=e39acf91-ca58-4f65-b3ac-f45ac3fd5096">Write and Evaluate Algebraic Expressions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=3740a8ad-435d-4c83-abb1-98fd3e5da2b3">Simplify and Manipulate Algebraic Expressions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=3612cb5f-9d5b-451e-a6fb-768690e5cd82">Solve Linear Equations with Whole Numbers</a>
+            </div>
         </div>
 
+        <div class='course-container' id='module2'>
+            <h2>Self Paced Algebra Prep - Module 2</h2>
+            <h3>Graphs, Linear Equations, and Functions and Systems of Linear Equations</h3>
 
 
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=11f0159a-4f7b-4188-9786-90bbafde21bc">Cartesian Coordinates and Distances</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=aaa527d9-e653-47b8-b08a-96bdcaad0097">Domain and Piecewise Functions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=7e8c11bc-8dd4-4d6b-a716-327f1f4b28b7">Find Linear Equations</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=c74d71b0-7a87-407b-9542-c0bc057ba7be">Function Notation</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=91de1d26-9e13-4ce5-bfed-8a7c08ae3b97">Identify Slopes and Intercepts</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=aedc83ce-5228-48db-81e1-82ba3fb3edcf">Relations and Functions</a>
+            </div>
+        </div>
+
+        <div class='course-container' id='module3'>
+            <h2>Self Paced Algebra Prep - Module 3</h2>
+            <h3>Exponents, Polynomials, and Factoring</h3>
+
+            <div class='assignment'>
+                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=6245c5fa-ec3c-442a-9051-883d0f6e030c undefined">Properties of Exponents</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22615d54-3131-4bb7-8988-8241cd665f8b">Scientific Notation</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=d98f381d-8137-40a1-a650-3abf045ee789">Properties of Polynomials</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=07d495c1-ba21-4dd9-aaf4-50bcecf5d0a7">Operations on Polynomials</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=8183ec86-e46b-410c-8d2a-2887f7cf2b09">Factor Quadratics</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22a4ff17-89bb-4049-8e93-b4f0aa0c5715">Other Factoring Techniques</a>
+            </div>
+        </div>
     </div>
 </body>
 
