--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -22,6 +22,7 @@
         <div class='course-container' id='module1'>
             <h2>Self Paced Algebra Prep - Module 1</h2>
             <h3>Real Number System, Linear Inequalities, and Linear Equations</h3>
+            <h3>Corresponds to: Week 1 of MAT 134 or Week 1 of MAT 110</h3>
             <div class='assignment'>
                 <a target="_blank" href="https://www.knewton.com/join-course/7e5f3b27-96c9-4bd4-a16e-1601e8a6cb94?goal_id=92e2f62d-80c1-43ce-b568-ead63e69e252">Add and Subtract Integers</a>
             </div>
@@ -69,7 +70,7 @@
         <div class='course-container' id='module2'>
             <h2>Self Paced Algebra Prep - Module 2</h2>
             <h3>Graphs, Linear Equations, and Functions and Systems of Linear Equations</h3>
-
+            <h3>Corresponds to: Week 1 of MAT 134 or Week 2 of MAT 110</h3>
 
             <div class='assignment'>
                 <a target="_blank" href="https://www.knewton.com/join-course/67006da3-3c65-4341-9490-66847f3cddc9?goal_id=11f0159a-4f7b-4188-9786-90bbafde21bc">Cartesian Coordinates and Distances</a>
@@ -94,9 +95,10 @@
         <div class='course-container' id='module3'>
             <h2>Self Paced Algebra Prep - Module 3</h2>
             <h3>Exponents, Polynomials, and Factoring</h3>
+            <h3>Corresponds to: Week 2 of MAT 134 or Week 3 of MAT 110</h3>
 
             <div class='assignment'>
-                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=6245c5fa-ec3c-442a-9051-883d0f6e030c undefined">Properties of Exponents</a>
+                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=6245c5fa-ec3c-442a-9051-883d0f6e030c">Properties of Exponents</a>
             </div>
             <div class='assignment'>
                 <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22615d54-3131-4bb7-8988-8241cd665f8b">Scientific Notation</a>
@@ -112,6 +114,18 @@
             </div>
             <div class='assignment'>
                 <a target="_blank" href="https://www.knewton.com/join-course/86adfbc9-a2d2-49cb-b831-3cd9c2ca7a7a?goal_id=22a4ff17-89bb-4049-8e93-b4f0aa0c5715">Other Factoring Techniques</a>
+            </div>
+        </div>
+        <div class='course-container' id='module4'>
+            <h2>Self Paced Algebra Prep - Module 4</h2>
+            <h3>Rational Expressions and Equations</h3>
+            <h3>Corresponds to: Week 3 of MAT 134 or Week 4 of MAT 110</h3>
+
+            <div class='assignment'>
+                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/aaa43ab5-fce0-4209-96ef-5235dfdc8e78?goal_id=1af54204-6f6c-488b-bc3f-30c4d4062353">Operations on Rational Expressions</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/aaa43ab5-fce0-4209-96ef-5235dfdc8e78?goal_id=5bf060ae-e359-4a04-8a39-3a31b91c6746">Direct and Inverse Variation</a>
             </div>
         </div>
     </div>
