--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -128,7 +128,30 @@
                 <a target="_blank" href="https://www.knewton.com/join-course/aaa43ab5-fce0-4209-96ef-5235dfdc8e78?goal_id=5bf060ae-e359-4a04-8a39-3a31b91c6746">Direct and Inverse Variation</a>
             </div>
         </div>
+
+        <div class='course-container' id='module5'>
+            <h2>Self Paced Algebra Prep - Module 3</h2>
+            <h3>Exponents, Polynomials, and Factoring</h3>
+            <h3>Corresponds to: Week 2 of MAT 134 or Week 3 of MAT 110</h3>
+
+            <div class='assignment'>
+                <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=4fb119ec-ef08-4bfb-b1b7-0274e1b368b1">Basics of Complex Numbers</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=6c9deff7-205b-4a0e-98b1-fad4326377a1">Operations on Complex Numbers</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=abb1826e-d16b-48d1-a339-c85a54f16656">Operations with Radicals</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=07cce6c6-aba5-4c7d-8116-7a50d932e100">Rational Exponents and Higher Order Radicals</a>
+            </div>
+            <div class='assignment'>
+                <a target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=d59ada2c-9e55-4986-a666-ca31e6144283">Simplify Radicals</a>
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
