--- a/AlgebraReview.html
+++ b/AlgebraReview.html
@@ -130,9 +130,9 @@
         </div>
 
         <div class='course-container' id='module5'>
-            <h2>Self Paced Algebra Prep - Module 3</h2>
-            <h3>Exponents, Polynomials, and Factoring</h3>
-            <h3>Corresponds to: Week 2 of MAT 134 or Week 3 of MAT 110</h3>
+            <h2>Self Paced Algebra Prep - Module 6</h2>
+            <h3>Radical Expressions and Equations</h3>
+            <h3>Corresponds to: Week 4 of MAT 134 or Week 5 of MAT 110</h3>
 
             <div class='assignment'>
                 <a target="_blank" target="_blank" href="https://www.knewton.com/join-course/9e7a4a9d-b822-4db5-a15b-2cdb07275daf?goal_id=4fb119ec-ef08-4bfb-b1b7-0274e1b368b1">Basics of Complex Numbers</a>
